--- a/src/global.scss
+++ b/src/global.scss
@@ -17,7 +17,7 @@ $red_text: rgb(216, 14, 14);
 
 
 $color-1: rgb(186, 148, 77);
-$color-2: #EEE2DC;
+$color-2: #f5eae5;
 $color-3: #BAB2B5;
 $color-4: #30659e;
 $color-5: #68273d;
