--- a/src/components/layout/home/Contact.scss
+++ b/src/components/layout/home/Contact.scss
@@ -2,6 +2,8 @@
 
 .contact_div{
     margin: 5rem 0rem;
+    background: linear-gradient( 180deg, #ffffff, $color-2);
+
 
     @media screen and (max-width: 640px){
         margin: 5rem 0rem;
@@ -38,7 +40,7 @@
     align-items: center;
     padding-top: 2rem;
     padding-bottom: 5rem;
-    background: linear-gradient( 180deg, rgb(255, 255, 255), rgb(255,255,255));
+    
 
     h4, h5, h2{
         margin: 20px;
