--- a/src/components/layout/home/Header.scss
+++ b/src/components/layout/home/Header.scss
@@ -1,18 +1,17 @@
 @import '../../../global.scss';
 
 .header_div{
-    background: linear-gradient( 180deg, rgb(255, 255, 255), $color-2);
-    margin: 3rem 0rem;
+    background: linear-gradient( 180deg, #ffffff, $color-2);
     border-radius: 0rem;
-    padding-top: 7rem;
+    padding-top: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    border-radius: 5rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
 
     @media screen and (max-width: 640px){
-        margin: 1rem 0rem;
         border-radius: 2rem;
     }
 
