--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -191,7 +191,7 @@
         
 
         .webdev_1{
-            margin: 2rem;
+            margin: 2rem 0.5rem;
             display: flex;
             justify-content: flex-start;
 
@@ -212,7 +212,7 @@
         }
 
         .webdev_2{
-            margin: 2rem;
+            margin: 2rem 0.5rem;
             display: flex;
             justify-content: flex-end;
 
@@ -233,7 +233,7 @@
         }
 
         .webdev_3{
-            margin: 2rem;
+            margin: 2rem 0.5rem;
             display: flex;
             justify-content: flex-start;
 
@@ -257,6 +257,11 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            margin: 4rem auto;
+
+            @media screen and (max-width: 640px){
+                margin: 3rem 0rem;
+            }
             
             .swiper-container{
                 width: 150vh;
@@ -292,7 +297,8 @@
                 border-top-left-radius: 20px;
                 border-top-right-radius: 20px;
                 height: 300px;
-                width: 100%;
+                width: 99%;
+                transform: translateX(0.5%);
                 background-image: url('../../../../assets/racingcar.png');
                 background-position: center;
                 background-size: 33rem;
@@ -304,7 +310,10 @@
             }
 
             .webother_des{
-                border-radius: 20px;
+                border-bottom-left-radius: 20px;
+                border-bottom-right-radius: 20px;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
                 height: 100%;
                 width: 100%;
                 background-color: rgb(255, 225, 225);
@@ -312,12 +321,19 @@
                 padding: 1rem 0.5rem;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
                 align-items: center;
+                justify-content: space-between;
+
+                .class_button{
+                    margin-top: 1rem;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: flex-end;
+                    justify-content: center;
+                }
 
                 button{
-                    margin-right: 1rem;
-                    margin-bottom: 1rem;
                     color: rgb(255, 255, 255);
                     padding: 15px 50px;
                     font-size: 1rem;
