--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -158,7 +158,7 @@
 
             img{
                 width: 40rem;
-                height: 28rem;
+                height: 29rem;
 
                 @media screen and (max-width: 640px){
                     width: 20rem;
@@ -272,6 +272,10 @@
                 }
             }
 
+            .swiper-wrapper{
+                justify-content: center;
+            }
+
             .swiper-slide{
                 width: 400px !important;
                 margin-right: 2rem !important;
@@ -297,15 +301,16 @@
                 border-top-left-radius: 20px;
                 border-top-right-radius: 20px;
                 height: 300px;
-                width: 99%;
-                transform: translateX(0.5%);
-                background-image: url('../../../../assets/racingcar.png');
-                background-position: center;
-                background-size: 33rem;
+                width: 99.5%;
+                transform: translateX(0.25%);
+                background-image: url('../../../../assets/projects/webothers/bakedgoods.png');
+                background-size: 25rem;
                 z-index: -2;
+                box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
+
 
                 @media screen and (max-width: 640px){
-                    background-size: 28rem;
+                    background-size: 20rem;
                 }
             }
 
@@ -316,13 +321,14 @@
                 border-top-right-radius: 10px;
                 height: 100%;
                 width: 100%;
-                background-color: rgb(255, 225, 225);
+                background-color: rgb(255, 255, 255);
                 transform: translateY(-20%);
-                padding: 1rem 0.5rem;
+                padding: 1.2rem 0.5rem;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-between;
+                box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
 
                 .class_button{
                     margin-top: 1rem;
