--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -305,12 +305,13 @@
                 transform: translateX(0.25%);
                 background-image: url('../../../../assets/projects/webothers/bakedgoods.png');
                 background-size: 25rem;
+                background-position: center;
                 z-index: -2;
                 box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
 
 
                 @media screen and (max-width: 640px){
-                    background-size: 20rem;
+                    background-size: 25rem;
                 }
             }
 
@@ -323,12 +324,22 @@
                 width: 100%;
                 background-color: rgb(255, 255, 255);
                 transform: translateY(-20%);
-                padding: 1.2rem 0.5rem;
+                padding: 1.2rem 1rem;
                 display: flex;
                 flex-direction: column;
-                align-items: center;
+                align-items:flex-start;
                 justify-content: space-between;
                 box-shadow: 0 5px 10px rgba(90, 90, 90, 0.26);
+
+                h5{
+                    font-weight: 900;
+                    color: $color-1;
+                    font-size: 1.1rem;
+    
+                    @media screen and (max-width: 640px){
+                        font-size: 0.9rem;
+                    }
+                }
 
                 .class_button{
                     margin-top: 1rem;
