Finished 1st Stage of Portfolio Website

--- a/src/components/layout/home/Contact.scss
+++ b/src/components/layout/home/Contact.scss
@@ -2,7 +2,7 @@
 
 .contact_div{
     margin: 5rem 0rem;
-    background: linear-gradient( 180deg, #ffffff, $color-2);
+    background: linear-gradient( 180deg, #f6fafc, #ffe5dc);
 
 
     @media screen and (max-width: 640px){
