--- a/src/components/layout/home/Header.scss
+++ b/src/components/layout/home/Header.scss
@@ -1,7 +1,7 @@
 @import '../../../global.scss';
 
 .header_div{
-    background: linear-gradient( 180deg, #ffffff, $color-2);
+    background: linear-gradient( 180deg, #f6fafc, #ffe5dc);
     border-radius: 0rem;
     padding-top: 10rem;
     display: flex;
