--- a/src/components/layout/home/portfolio/Webdev.scss
+++ b/src/components/layout/home/portfolio/Webdev.scss
@@ -51,7 +51,7 @@
                 margin: 1rem 0rem;
 
                 @media screen and (max-width: 640px){
-                    font-size: 0.8rem;
+                    font-size: 0.9rem;
                     margin: 0.5rem 0rem;
                 }
             }
@@ -162,7 +162,7 @@
 
                 @media screen and (max-width: 640px){
                     width: 20rem;
-                    height: 15rem;
+                    height: 14rem;
                 }
             }
             
@@ -272,10 +272,6 @@
                 }
             }
 
-            .swiper-wrapper{
-                justify-content: center;
-            }
-
             .swiper-slide{
                 width: 400px !important;
                 margin-right: 2rem !important;
@@ -303,7 +299,6 @@
                 height: 300px;
                 width: 99.5%;
                 transform: translateX(0.25%);
-                background-image: url('../../../../assets/projects/webothers/bakedgoods.png');
                 background-size: 25rem;
                 background-position: center;
                 z-index: -2;
@@ -313,6 +308,16 @@
                 @media screen and (max-width: 640px){
                     background-size: 25rem;
                 }
+            }
+
+            .other1{
+                background-image: url('../../../../assets/projects/webothers/bakedgoods.png');
+
+            }
+
+            .other2{
+                background-image: url('../../../../assets/projects/webothers/portfolio.png');
+
             }
 
             .webother_des{
