--- a/src/components/layout/topbar/Topbar.scss
+++ b/src/components/layout/topbar/Topbar.scss
@@ -31,8 +31,8 @@
 
                 h4{
                     letter-spacing: 4.5px;
-                    color: rgba(0, 0, 0, 0.898);
-                    opacity: 0.65;
+                    color: #68273d;
+                    opacity: 0.9;
                     margin: 0px 10px;
                     margin-top: 5px;
                 }
