--- a/src/components/layout/home/Contact.scss
+++ b/src/components/layout/home/Contact.scss
@@ -1,6 +1,7 @@
 @import '../../../global.scss';
 
 .contact_div{
+    padding-top: 1.4rem;
     margin: 5rem 0rem;
     background: linear-gradient( 180deg, #f6fafc, #ffe5dc);
 
